2004-12-29  Derek Price  <derek@ximbiot.com>

	* README: Remove obsolete note about using shar for binary attachments
	to mailing lists.

2004-12-29  Derek Price  <derek@ximbiot.com>

	* config.guess, config.sub: New files from Automake.

2004-12-13  Patrice Dumas  <dumas@centre-cired.fr>

	* INTRODUCTION, README: update with dev mailing list. Advertise the
	manual as being rather complete.
	* Makefile.am,Makefile.in: build in . before doc, as texi2html is 
	needed to rebuild the doc.

2004-12-11  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init,examples/roff.init,examples/html32.init,
	examples/inlinestyle.init,NEWS: add support for @euro, @sansserif.
	* Tests: test for @euro, @sansserif, deff arguments with braces
	appearing within the argument (and not at the beginning). Sync.

2004-12-11  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: internal targets and targets of 
	cross refs are valid as XML identifiers. This is compatible with the
	updated specification presented in the texinfo manual in the node 
	HTML Xref.
	* doc,Tests: sync.

2004-11-22  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: handle right deff arguments with braces appearing
	within the argument (and not at the beginning).

2004-10-08  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: add a mail address to the --help screen (idea from 
	Karl Berry).

2004-10-06  Patrice Dumas  <dumas@centre-cired.fr>

	* configure.in: add the lines asked for by Thomas Esser for addition
	to teTeX.
	* Makefile.in...: regenerate with automake 1.9.1.

2004-10-06  Patrice Dumas  <dumas@centre-cired.fr>

	* Makefile.am: use $(PERL) and $(srcdir) in manage_i18n.pl rule
	(idea of Karl Berry).

2004-08-13  Patrice Dumas  <dumas@centre-cired.fr> 

	* texi2html.pl, texi2html.init: Cross refs are done according to the 
	specification presented in the texinfo manual in the node HTML Xref.
	The "external source of information" is also used although it isn't